Add CRC64 utility

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 #COPYRIGHT Meteo-France 2023
 set(TEST_FILES
+        test_crc64.F90
 	async_host.F90
 	cpu_to_gpu.F90
 	cpu_to_gpu_delayed_init_value.F90
