Fix tests that we know will call abor1

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,7 +8,6 @@
 # nor does it submit to any jurisdiction.
 
 set(TEST_FILES
-        test_crc64.F90
 	async_host.F90
 	cpu_to_gpu.F90
 	cpu_to_gpu_delayed_init_value.F90
@@ -45,28 +44,41 @@ set(TEST_FILES
 	pointer_to_owner_wrapper.F90
 	sync_device.F90
 	sync_host.F90
+	test_crc64.F90
 	wrapper_modify_gpu.F90
 	)
 
 set(FAILING_TEST_FILES
+	)
+
+#These tests will call abor1
+set(ABOR1_TEST_FILES
 	get_view_when_ndevfresh.F90
 	get_view_when_unallocated.F90
 	)
 
 set (CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/tests/modules)
 include_directories(${CMAKE_BINARY_DIR}/modules)
+set(LNK_FLAGS -L${fiat_BASE_DIR}/lib64 -L${fiat_BASE_DIR}/lib -lfiat -Wl,-rpath,${fiat_BASE_DIR}/lib64 -Wl,-rpath,${fiat_BASE_DIR}/lib)
 
 foreach(TEST_FILE ${TEST_FILES})
 	get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
 	add_executable(${TEST_NAME}.x ${TEST_FILE})
-	target_link_libraries(${TEST_NAME}.x ${LIBNAME} -L${fiat_BASE_DIR}/lib64 -L${fiat_BASE_DIR}/lib -lfiat -Wl,-rpath,${fiat_BASE_DIR}/lib64 -Wl,-rpath,${fiat_BASE_DIR}/lib)
+	target_link_libraries(${TEST_NAME}.x ${LIBNAME} ${LNK_FLAGS})
 	add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME}.x)
 endforeach()
 
 foreach(FAILING_TEST_FILE ${FAILING_TEST_FILES})
 	get_filename_component(FAILING_TEST_NAME ${FAILING_TEST_FILE} NAME_WE)
 	add_executable(${FAILING_TEST_NAME}.x ${FAILING_TEST_FILE})
-	target_link_libraries(${FAILING_TEST_NAME}.x ${LIBNAME} -L${fiat_BASE_DIR}/lib64 -L${fiat_BASE_DIR}/lib -lfiat -Wl,-rpath,${fiat_BASE_DIR}/lib64 -Wl,-rpath,${fiat_BASE_DIR}/lib)
+	target_link_libraries(${FAILING_TEST_NAME}.x ${LIBNAME} ${LNK_FLAGS})
 	add_test(NAME ${FAILING_TEST_NAME} COMMAND ${FAILING_TEST_NAME}.x)
 	set_property(TEST ${FAILING_TEST_NAME} PROPERTY WILL_FAIL TRUE)
+endforeach()
+
+foreach(ABOR1_TEST_FILE ${ABOR1_TEST_FILES})
+	get_filename_component(ABOR1_TEST_NAME ${ABOR1_TEST_FILE} NAME_WE)
+	add_executable(${ABOR1_TEST_NAME}.x ${ABOR1_TEST_FILE})
+	target_link_libraries(${ABOR1_TEST_NAME}.x ${LIBNAME} ${LNK_FLAGS})
+	add_test(NAME ${ABOR1_TEST_NAME} COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/abor1catcher.sh ${ABOR1_TEST_NAME}.x)
 endforeach()
