add new field_resize functionality

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,6 +55,8 @@ list(APPEND TEST_FILES
 	no_transfer_get_device.F90
 	no_transfer_get_host.F90
 	pointer_to_owner_wrapper.F90
+	resize_owner.F90
+	resize_owner2.F90
 	sync_device.F90
 	sync_host.F90
 	test_crc64.F90
@@ -69,6 +71,7 @@ set(FAILING_TEST_FILES
 set(ABOR1_TEST_FILES
 	get_view_when_ndevfresh.F90
 	get_view_when_unallocated.F90
+	resize_wrapper.F90
 	)
 
 foreach(TEST_FILE ${TEST_FILES})
