add get_dims test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND TEST_FILES
 	final_wrapper.F90
 	final_wrapper_gpu.F90
 	gather_scatter.F90
+	get_dims.F90
 	get_stats.F90
 	get_view.F90
 	get_view_get_device_data.F90
