--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,13 +7,15 @@
 # granted to it by virtue of its status as an intergovernmental organisation
 # nor does it submit to any jurisdiction.
 
+set(LIBNAME_PREC ${LIBNAME}_${DEFAULT_PRECISION})
+
 ## Host-device ping-pong runner
 ecbuild_add_test(
     TARGET main.x
     SOURCES main.F90
     LIBS
-       ${LIBNAME}_dp
-       parkind_dp
+    ${LIBNAME_PREC}
+    parkind_${DEFAULT_PRECISION}
        fiat
        OpenMP::OpenMP_Fortran
     LINKER_LANGUAGE Fortran
@@ -81,8 +83,8 @@ foreach(TEST_FILE ${TEST_FILES})
         TARGET ${TEST_NAME}.x
         SOURCES ${TEST_FILE}
         LIBS
-           ${LIBNAME}_dp
-           parkind_dp
+	${LIBNAME_PREC}
+	parkind_${DEFAULT_PRECISION}
            fiat
            OpenMP::OpenMP_Fortran
         LINKER_LANGUAGE Fortran
@@ -96,7 +98,7 @@ endforeach()
 foreach(FAILING_TEST_FILE ${FAILING_TEST_FILES})
 	get_filename_component(FAILING_TEST_NAME ${FAILING_TEST_FILE} NAME_WE)
 	add_executable(${FAILING_TEST_NAME}.x ${FAILING_TEST_FILE})
-	target_link_libraries(${FAILING_TEST_NAME}.x ${LIBNAME}_dp parkind_dp fiat OpenMP::OpenMP_Fortran)
+	target_link_libraries(${FAILING_TEST_NAME}.x ${LIBNAME_PREC} parkind_${DEFAULT_PRECISION} fiat OpenMP::OpenMP_Fortran)
 	set_target_properties(${FAILING_TEST_NAME}.x PROPERTIES LINKER_LANGUAGE Fortran)
 	add_test(NAME ${FAILING_TEST_NAME} COMMAND ${FAILING_TEST_NAME}.x)
 	set_property(TEST ${FAILING_TEST_NAME} PROPERTY WILL_FAIL TRUE)
@@ -105,7 +107,7 @@ endforeach()
 foreach(ABOR1_TEST_FILE ${ABOR1_TEST_FILES})
 	get_filename_component(ABOR1_TEST_NAME ${ABOR1_TEST_FILE} NAME_WE)
 	add_executable(${ABOR1_TEST_NAME}.x ${ABOR1_TEST_FILE})
-	target_link_libraries(${ABOR1_TEST_NAME}.x ${LIBNAME}_dp parkind_dp fiat OpenMP::OpenMP_Fortran)
+	target_link_libraries(${ABOR1_TEST_NAME}.x ${LIBNAME_PREC} parkind_${DEFAULT_PRECISION} fiat OpenMP::OpenMP_Fortran)
 	set_target_properties(${ABOR1_TEST_NAME}.x PROPERTIES LINKER_LANGUAGE Fortran)
 	add_test(NAME ${ABOR1_TEST_NAME} COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/abor1catcher.sh ${ABOR1_TEST_NAME}.x)
 endforeach()
@@ -120,5 +122,5 @@ ecbuild_add_test(
       parkind_sp
       OpenMP::OpenMP_Fortran
     LINKER_LANGUAGE Fortran
+    CONDITION ${HAVE_SINGLE_PRECISION}
 )
-
