Split FIELD_FACTOR into multiple files for faster compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,7 +96,7 @@ list(APPEND srcs field_basic_module.F90 field_init_debug_value_module.F90 dev_al
 foreach (SUFF IN ITEMS IM RM RB RD LM)
   string (TOLOWER ${SUFF} suff)
   foreach (RANK RANGE 2 5)
-    foreach (FUNC IN ITEMS "" _gathscat _access _util _array_util _buffer)
+    foreach (FUNC IN ITEMS "" _gathscat _access _util _array_util _buffer _factory)
       if( NOT ((${FUNC} STREQUAL "_buffer") AND (${RANK} EQUAL 2)) )
          add_custom_command (OUTPUT field_${RANK}${suff}${FUNC}_module.F90
    	      COMMAND ${FYPP} -n -DRANK=${RANK} -DSUFF='${SUFF}' -m os -M ${CMAKE_CURRENT_SOURCE_DIR} -m fieldType 
