--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,8 +46,6 @@ list(APPEND TEST_FILES
 	init_owner_delayed_init_debug_value.F90
 	init_owner_delayed_init_value.F90
 	test_field_buffer_coherency_gpu_dirty.F90
-#    init_final_owner_field_buffer.F90
-#    init_final_wrapper_field_buffer.F90
 	init_owner_gpu.F90
 	init_owner_init_debug_value.F90
 	init_owner_init_debug_value_gpu.F90
@@ -67,6 +65,7 @@ list(APPEND TEST_FILES
 	sync_device.F90
 	sync_host.F90
 	test_crc64.F90
+	test_buffer.F90
 	wrapper_modify_gpu.F90
 	)
 
