--- a/.github/workflows/fieldapi_intel_classic.yml
+++ b/.github/workflows/fieldapi_intel_classic.yml
@@ -1,4 +1,4 @@
-name: FieldAPI_intel
+name: FieldAPI_intel_classic 
 
 on: [push, pull_request]
 
@@ -29,7 +29,12 @@ jobs:
     - name: Install Intel oneAPI
       run: |
         sudo apt update
-        sudo apt install intel-hpckit
+        sudo apt install \
+          intel-oneapi-compiler-fortran-2023.2.0 \
+          intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic-2023.2.0 \
+          intel-oneapi-mpi-devel-2021.10.0 \
+          intel-oneapi-mkl-2023.2.0
+
 
     - name: Setup Intel oneAPI environment
       run: |
@@ -64,7 +69,7 @@ jobs:
          ecbuild_ROOT: ${{github.workspace}}/ecbuild/bin
       working-directory: ${{github.workspace}}/fiat
       run: |
-        cmake -B ${{github.workspace}}/fiat/build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DENABLE_TESTS=OFF -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DCMAKE_Fortran_COMPILER=ifx
+        cmake -B ${{github.workspace}}/fiat/build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DENABLE_TESTS=OFF -DCMAKE_C_COMPILER=icc -DCMAKE_CXX_COMPILER=icpc -DCMAKE_Fortran_COMPILER=ifort
         cmake --build ${{github.workspace}}/fiat/build -- -j
         
     - name: Configure field_api
@@ -74,7 +79,7 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
-        cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DENABLE_ACC=OFF -DCMAKE_C_COMPILER=icx -DCMAKE_CXX_COMPILER=icpx -DCMAKE_Fortran_COMPILER=ifx
+        cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DENABLE_ACC=OFF -DCMAKE_C_COMPILER=icc -DCMAKE_CXX_COMPILER=icpc -DCMAKE_Fortran_COMPILER=ifort
   
     - name: Build field_api
       # Build your program
