Set DEV_ALLOC_SIZE to 1GB for tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,9 @@
 
 set(LIBNAME_PREC ${LIBNAME}_${DEFAULT_PRECISION})
 
+# set DEV_ALLOC_SIZE for tests
+set(dev_alloc_size "1073741824") # 1GB
+
 ## Host-device ping-pong runner
 ecbuild_add_test(
     TARGET main.x
@@ -19,6 +22,7 @@ ecbuild_add_test(
        fiat
        OpenMP::OpenMP_Fortran
     LINKER_LANGUAGE Fortran
+	ENVIRONMENT "DEV_ALLOC_SIZE=${dev_alloc_size}"
 )
 target_link_options( main.x PRIVATE $<${HAVE_CUDA}:-cuda;-gpu=pinned> )
 target_compile_definitions( main.x PRIVATE $<${HAVE_CUDA}:_CUDA> )
@@ -110,6 +114,7 @@ foreach(TEST_FILE ${TEST_FILES})
            OpenMP::OpenMP_Fortran
         LINKER_LANGUAGE Fortran
         OMP ${omp_num_threads}
+		ENVIRONMENT "DEV_ALLOC_SIZE=${dev_alloc_size}"
     )
 
     set_target_properties(${TEST_NAME}.x
@@ -127,7 +132,7 @@ foreach(FAILING_TEST_FILE ${FAILING_TEST_FILES})
 	set_target_properties(${FAILING_TEST_NAME}.x PROPERTIES LINKER_LANGUAGE Fortran)
 	add_test(NAME ${FAILING_TEST_NAME} COMMAND ${FAILING_TEST_NAME}.x)
 	set_property(TEST ${FAILING_TEST_NAME} PROPERTY WILL_FAIL TRUE)
-	set_property(TEST ${FAILING_TEST_NAME} PROPERTY ENVIRONMENT "OMP_NUM_THREADS=${omp_num_threads}")
+	set_property(TEST ${FAILING_TEST_NAME} PROPERTY ENVIRONMENT "OMP_NUM_THREADS=${omp_num_threads};DEV_ALLOC_SIZE=${dev_alloc_size}")
     target_link_options( ${FAILING_TEST_NAME}.x PRIVATE $<${HAVE_CUDA}:-cuda;-gpu=pinned> )
     target_compile_definitions( ${FAILING_TEST_NAME}.x PRIVATE $<${HAVE_CUDA}:_CUDA> )
 endforeach()
@@ -138,7 +143,7 @@ foreach(ABOR1_TEST_FILE ${ABOR1_TEST_FILES})
 	target_link_libraries(${ABOR1_TEST_NAME}.x ${LIBNAME_PREC} parkind_${DEFAULT_PRECISION} fiat OpenMP::OpenMP_Fortran)
 	set_target_properties(${ABOR1_TEST_NAME}.x PROPERTIES LINKER_LANGUAGE Fortran)
 	add_test(NAME ${ABOR1_TEST_NAME} COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/abor1catcher.sh "./${ABOR1_TEST_NAME}.x")
-	set_property(TEST ${ABOR1_TEST_NAME} PROPERTY ENVIRONMENT "OMP_NUM_THREADS=${omp_num_threads}")
+	set_property(TEST ${ABOR1_TEST_NAME} PROPERTY ENVIRONMENT "OMP_NUM_THREADS=${omp_num_threads};DEV_ALLOC_SIZE=${dev_alloc_size}")
     target_link_options( ${ABOR1_TEST_NAME}.x PRIVATE $<${HAVE_CUDA}:-cuda;-gpu=pinned> )
     target_compile_definitions( ${ABOR1_TEST_NAME}.x PRIVATE $<${HAVE_CUDA}:_CUDA> )
 endforeach()
