Add simple field_gang test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ list(APPEND TEST_FILES
 	reshuffle.F90
 	test_wrappernosynconfinal.F90
 	test_field1d.F90
+	test_field_gang_simple.F90
 	test_pinned.F90
 	async_host.F90
 	cpu_to_gpu.F90
